[gd_scene load_steps=3 format=3 uid="uid://cn8tqtioboruq"]

[ext_resource type="Script" path="res://GUI/esc_menu.gd" id="1_wkvhc"]

[sub_resource type="Theme" id="Theme_hlsq3"]
default_font_size = 35

[node name="esc_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hlsq3")
script = ExtResource("1_wkvhc")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="menu" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "return to main menu"

[node name="settings" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="return" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "return"

[node name="quit" type="Button" parent="ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/menu" to="." method="_on_menu_button_down"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/return" to="." method="_on_return_button_down"]
[connection signal="button_down" from="ScrollContainer/PanelContainer/VBoxContainer/quit" to="." method="_on_quit_button_down"]
